--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "spectacle",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://jvanhare.github.io/slides",
+  "homepage": "https://jvanhare.github.io/NumPEx2023",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-brands-svg-icons": "^6.4.0",
@@ -18,6 +18,9 @@
     "@types/styled-components": "^5.1.26",
     "date-fns": "^2.29.3",
     "gh-pages": "^5.0.0",
+    "pdf-lib": "^1.17.1",
+    "pdf-merger-js": "^4.3.0",
+    "puppeteer": "^21.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-latex-next": "^2.2.0",
